Creating database schema

--- a/TaskTrackr/appsettings.Development.json
+++ b/TaskTrackr/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=TestDB;User=sa;Password=tajneHeslo532;TrustServerCertificate=True;ConnectRetryCount=0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
