Feat: adding README file

--- a/TaskTrackr/appsettings.Development.json
+++ b/TaskTrackr/appsettings.Development.json
@@ -7,5 +7,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "Issuer": "http://localhost:5242",
+    "Audience": "http://localhost:5242",
+    "SigningKey": "4q3fj9834faeuirhx983fjqx93fh3f438h94f"
   }
 }
